# Go_RL

./: Board.cpp  Board.h  CMakeLists.txt  Game.cpp  Game.h  Group.cpp  Group.h  Move.cpp  Move.h  Player.cpp  Player.h  README.md  go.cpp  main.cpp  training.py
